<?xml version="1.0" encoding="utf-8"?>
<EditText xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editar_cancion_letra"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hint="Letra de la canción"
    android:inputType="textMultiLine"
    android:fontFamily="monospace"
    tools:context="ids.androidsong.ui.EditarCancion"
    tools:showIn="@layout/activity_editar_cancion"/>
