<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/cancion_lista_carpeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<android.support.v7.widget.RecyclerView
    android:id="@+id/cancion_lista"
    android:name="ids.androidsong.ui.cancionMusicoListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layoutManager="LinearLayoutManager"
    tools:context="ids.androidsong.ui.CancionLista"
    tools:listitem="@layout/cancion_lista_content" />
</LinearLayout>